--- a/Flutter_UI_builder/tsconfig.json
+++ b/Flutter_UI_builder/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/flow.module.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/flow.module.jsx", "src/app/Block.ts"],
   "exclude": ["node_modules"]
 }
