--- a/Flutter_UI_builder/package.json
+++ b/Flutter_UI_builder/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
