--- a/Flutter_UI_builder/package.json
+++ b/Flutter_UI_builder/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
+    "@mui/x-tree-view": "^6.17.0",
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
     "npm": "^10.4.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "reactflow": "^11.10.2"
   },
   "devDependencies": {
