add demo to readme

--- a/Flutter_UI_builder/.github/workflows/publlish.yml
+++ b/Flutter_UI_builder/.github/workflows/publlish.yml
@@ -2,7 +2,7 @@ name: publish-to-github-pages
 on:
   push:
     branches:
-      - master
+      - main
 
 permissions:
   contents: read
@@ -24,13 +24,15 @@ jobs:
       - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
 
-      - name: Setup Pages ⚙️
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
+    #   - name: Setup Pages ⚙️
+    #     uses: actions/configure-pages@v4
+    #     with:
+    #       static_site_generator: next
 
       - name: Build with Next.js 🏗️
         run: npx next build
+        env:
+          NEXT_PUBLIC_OPENAI_API_KEY: ${{ secrets.NEXT_PUBLIC_OPENAI_API_KEY }}
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
