--- a/Flutter_UI_builder/package.json
+++ b/Flutter_UI_builder/package.json
@@ -2,6 +2,7 @@
   "name": "flutter_builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
