--- a/UI_Backend/Dockerfile
+++ b/UI_Backend/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR /app
 
 COPY . /app
 
-RUN apt-get update && \
+RUN apt-get update -y && \
     apt-get install -y curl git unzip npm cmake ninja-build clang-tools clang pkg-config libvlccore-dev libvlc-dev gtk+-3.0 glib-2.0 gio-2.0
 
-
+RUN npm install
 EXPOSE 8080
 EXPOSE 9998
 
-CMD ./run
+CMD ["node","app.js"]
