--- a/UI_Backend/package.json
+++ b/UI_Backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for flutter app builder",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node app.js"
   },
   "author": "Anmol Sharma",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "request": "^2.88.2"
   }
 }
